# closed-beta

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yml  first_time.sql  main.py  pyproject.toml
.github/workflows/: deploy_on_release.yml  format_with_ruff.yml  release_on_push.yml
cogs/: admin.py  afk.py  basic.py  closedbeta.py  economy.py  giveaway.py  help.py  info.py  log.py  mod.py  say.py  setup.py  snapshot.py  status.py
core/: __init__.py  argument.py  bot.py  command.py  context.py  logging.py  slash_localization.py
helpers/: __init__.py  convert.py  custom_args.py  custom_response.py  pagination.py  random_helper.py  regex.py
localization/: en.l10n.json  hu.l10n.json
slash_localization/: en.l10n.json  hu.l10n.json
