[project]
name = "lumin"
version = "0.6.1"
description = "fm01 v2.0 - closed beta"
authors = [
    { name = "Pearoo", email = "contact@pearoo.dev" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "discord-localization>=1.1.4",
    "discord>=2.3.2",
    "pyyaml>=6.0.2",
    "asyncpg>=0.30.0",
    "python-dotenv>=1.1.0",
    "docutils-stubs>=0.0.22",
    "uvloop; sys_platform == 'linux' or sys_platform == 'darwin'",
    "aiodns>=3.5.0",
    "psutil>=7.0.0",
    "py-cpuinfo>=9.0.0",
    "emoji>=2.14.1",
    "pypokedex>=1.6.0",
    "art>=6.5",
    "ruff>=0.13.1",
    "pillow>=11.3.0",
    "asyncpraw>=7.8.1",
    "pytemperature>=1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]

[tool.setuptools]
packages = ["helpers"]

[tool.uv]

[tool.ruff]
line-length = 120
src = ["core", "helpers", "cogs"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F403"]

[tool.ruff.format]
docstring-code-format = true
indent-style = "tab"
skip-magic-trailing-comma = true

[tool.ruff.lint]
logger-objects = ["core.logging"]
select = ["D"]
ignore = ["D100", "D101", "D102", "D103", "D105", "D206", "D401"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
